--- a/index_styling.css
+++ b/index_styling.css
@@ -29,7 +29,7 @@ div.main_body_div_mobile
 
 div.master_class_logo
 {
-    /* background-color: teal; */
+    background-color: teal;
     width:100%;
     height:350px;
     position: static;
@@ -112,6 +112,7 @@ div.navgn_panel
     width:20%;
     border-radius: 50px;;
     height:50px;
+    text-align: center;
     background-color: darkolivegreen;
     position:sticky;
     top:10px
