--- a/index_styling.css
+++ b/index_styling.css
@@ -34,7 +34,7 @@ div.main_body_div_mobile
 
 div.master_class_logo
 {
-    background-color: teal;
+    /* background-color: teal; */
     width:100%;
     height:350px;
     position: static;
