--- a/index_styling.css
+++ b/index_styling.css
@@ -17,24 +17,28 @@ div.main_body_div
 {
     position: absolute; 
     background-color:black; 
-    height: 2000px;
+    overscroll-behavior: contain;
 }
+
 
 div.main_body_div_desktop 
 { 
     width: 90%;
     margin-left:5%;
+    height: 2000px;
+
 }
 
 
 div.main_body_div_mobile 
 { 
     width: 100%;
+    height: 1000px;
 }
 
 div.master_class_logo
 {
-    background-color: teal;
+    /* background-color: teal; */
     width:100%;
     position: static;
 }
@@ -128,6 +132,17 @@ div.navgn_panel
     height:50px;
     text-align: center;
     background-color: darkolivegreen;
+}
+
+div.navgn_panel_d
+{
     position:sticky;
+    top:10px
+}
+
+div.navgn_panel_m
+{
+    position: fixed;
+    width:100%;
     top:10px
 }
