--- a/index_styling.css
+++ b/index_styling.css
@@ -1,153 +1,176 @@
-html
-{
-    scroll-behavior: smooth;
-}
-
 * {
     margin:0px;
     padding:0px;
 }
 
+html
+{
+    scroll-behavior: smooth;
+}
 
 body {
     background: black;
+    text-align: center;
+    display: -moz-box;
+    display: -webkit-box;
+    -moz-box-pack: center;
+    -webkit-box-pack: center;
 }
 
 div.main_body_div
 {
+    max-width: 1500px;
+    display: -moz-box;
+    display: -webkit-box;
+    -moz-box-orient: vertical;
+    -webkit-box-orient: vertical;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -moz-box-align: center  ;
+    -webkit-box-align: center;
     visibility: hidden;
-    position: absolute; 
-    background-color:black; 
-    overscroll-behavior: contain;
+    background-color: black;
+
+    border-left: dashed white 1px;
+    border-right: dashed white 1px;
 }
 
-
-div.main_body_div_desktop 
-{ 
-    width: 90%;
-    margin-left:5%;
-    height: 2000px;
-
-}
-
-
-div.main_body_div_mobile 
-{ 
-    width: 100%;
-    height: 1000px;
-}
-
-div.master_class_logo
+div.gear_logo
 {
-    width:100%;
-    position: static;
-}
-
-div.master_class_logo_d
-{
-    height:350px;
-}
-
-div.master_class_logo_m
-{
-    height:250px;
-}
-
-/* @media only screen and (max-device-width: 1566px) */
-/* { */
-    div.gear_logo
-    {
-        position: fixed;
-        z-index: 2;
-        top: 80px;
-    }
-/* } */
-
-div.gear_logo_d
-{
-    height: 200px;
-    left:28%;
-}
-
-div.gear_logo_m
-{
-    height: 100px;
-    left:22%;
-}
-
-div.gear_logo > .gear1_d
-{
-    height:200px; 
-    width:200px;
-}
-
-div.gear_logo > .gear2_d
-{
-    height:120px;
-    position: absolute;
-    width:120px;
-    left: 185px;
-    top:1px;
-}
-
-div.gear_logo > .gear1_m
-{
-    height:100px; 
-    width:100px;
-}
-
-
-div.gear_logo > .gear2_m
-{
-    height:20px;
-    width:20px;
-    position: absolute;
-    left: 85px;
-    top:1px;
-    transform: rotate(0deg);
+    position: fixed;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+    
+    max-width: 1000px;
+    display: -moz-box;
+    display: -webkit-box;
+    -moz-box-orient: horizontal;
+    -webkit-box-orient: horizontal;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+    -moz-box-align: center  ;
+    -webkit-box-align: center;
+    /* background-color: brown; */
+    z-index: 10;
+    text-align: left;
 }
 
 div.gear_logo > .brand
 {
     font-family:fantasy;
+    font-size: 4vw;
     color:black;
 }
 
-div.gear_logo > .brand_d
+@media only all and (min-width: 600px)
 {
-    font-size: 60px;
-    margin-left:310px;
-    margin-top: -135px 
+    div.main_body_div_desktop 
+    { 
+        height: 2000px;
+    }
+    
+    div.master_class_logo_d
+    {
+        height:350px;
+    }
+    
+    div.gear_logo > .gear1_d
+    {
+        height:200px; 
+        width:200px;
+    }
+
+    div.gear_logo > .gear2_d
+    {
+        position: absolute;
+        height:120px;
+        width:120px;
+        left: 185px;
+        top:1px;
+    }
+
+    div.gear_logo > .brand_d
+    {
+        margin-left:120px;
+    }
 }
 
-div.gear_logo > .brand_m
+@media only all and (max-width: 600px)
 {
-    font-size: 20px;
-    margin-left:110px;
-    margin-top: -65px
+    div.main_body_div_mobile 
+    { 
+        height: 1000px;
+    }
+
+    div.master_class_logo_m
+    {
+        height:250px;
+    }
+    
+    div.gear_logo > .gear1_m
+    {
+        height:100px; 
+        width:100px;
+    }
+
+    div.gear_logo > .gear2_m
+    {
+        height:20px;
+        width:20px;
+        position: absolute;
+        left: 85px;
+        top:1px;
+        transform: rotate(0deg);
+    }
+
+    div.gear_logo > .brand_m
+    {
+        margin-left:5px;
+    }
 }
 
 div.navgn_panel
 {
     z-index: 1;
-    margin:auto;
     width:20%;
+    /* margin-top: -5vw; */
     border-radius: 50px;;
-    height:50px;
     text-align: center;
     background-color: darkolivegreen;
-    /* opacity: 0.5; */
 }
 
-div.navgn_panel_d
+@media only all and (min-width: 600px)
 {
-    position:sticky;
-    top:10px
+    div.navgn_panel_d
+    {
+        position:sticky;
+        top:10px;
+        height:50px;
+    }
 }
 
-div.navgn_panel_m
+@media only all and (max-width: 600px)
 {
-    position: fixed;
-    width:100%;
-    top:10px
+    div.navgn_panel_m
+    {
+        position: fixed;
+        width:100%;
+        top:10px;
+        height:40px;
+    }
+}
+
+
+.expand_button
+{
+    background-color: darkolivegreen; 
+    width:56px; 
+    height: 30px;
+    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    visibility:hidden;
+    text-align: center;
+    color: black;
+    /* opacity: 0.9; */
 }
